pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference1.pkl
import "pkl:ref"

class D extends ref.Domain {
  function referenceToString(data: Any, path: List<ref.Access>): String = throw("not supported")
}
local d: D = new {}
typealias Ref<T> = ref.Reference<D, T>

test = ref.Reference(d, String, "") as Ref<Int>
